<resources>
    <string name="app_name">MeToMe</string>
    <string name="focus_on_the_step_in_front_of_you_not_the_whole_staircase">Focus on the step in front of you, not the whole staircase.</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="artist">Artist</string>
    <string name="reader">Reader</string>
    <string name="writer">Writer</string>
    <string name="full_name">Full Name</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome..!</string>
    <string name="great_things_never_came_from_comfort_zones">GREAT THINGS NEVER CAME FROM COMFORT ZONES</string>
    <string name="believe_in_yourself_and_anything_is_possible">BELIEVE IN YOURSELF AND ANYTHING IS POSSIBLE</string>
    <string name="skip">Skip</string>
    <string name="name">Name:</string>
    <string name="add_piece">add piece</string>
</resources>