<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk2"
    tools:context="com.example.metome.SignUpActivity">


    <LinearLayout
        android:layout_width="313dp"
        android:layout_height="521dp"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="-40dp"
        android:layout_marginBottom="90dp"
        android:background="@drawable/login_shape"
        android:orientation="vertical"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="-40dp">

        <TextView
            android:id="@+id/tvSignup"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/sign_up"
            android:textColor="#ffffff"
            android:textSize="36sp"
            android:textStyle="bold"
            android:layout_marginStart="30dp" />

        <TextView
            android:id="@+id/tvFullName"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/full_name"
            android:textColor="#ffff"

            android:textSize="20sp"
            android:layout_marginStart="30dp" />

        <EditText
            android:id="@+id/etFullNameS"
            android:layout_width="222dp"
            android:layout_height="56dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/login_shape"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            android:layout_marginStart="30dp" />


        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/username"
            android:textColor="#ffff"

            android:textSize="20sp"
            android:layout_marginStart="30dp" />

        <EditText

            android:id="@+id/etUserNameSU"
            android:layout_width="222dp"
            android:layout_height="56dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/login_shape"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            android:layout_marginStart="30dp" />


        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/email"
            android:textColor="#ffff"
            android:textSize="20sp"
            android:layout_marginStart="30dp" />

        <EditText

            android:id="@+id/etEmail"
            android:layout_width="222dp"
            android:layout_height="56dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/login_shape"
            android:ems="10"
            android:gravity="center_horizontal"
            android:textColor="#FFFFFF"
            android:layout_marginStart="30dp" />

        <TextView
            android:id="@+id/tvPasswordSU"
            android:layout_width="101dp"
            android:layout_height="34dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/password"
            android:textColor="#ffff"
            android:textSize="20sp"
            android:layout_marginStart="30dp" />

        <EditText
            android:id="@+id/etPasswordSU"
            android:layout_width="222dp"
            android:layout_height="56dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/login_shape"
            android:ems="10"
            android:gravity="center_horizontal"
            android:textColor="#FFFFFF"
            android:layout_marginStart="30dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSignUp11"
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="205dp"
        android:layout_marginLeft="205dp"
        android:layout_marginTop="620dp"
        android:background="@drawable/circle_dark_blue"
        android:onClick="btnSignUp"
        android:text="@string/sign_up"
        android:textColor="#ffff"
        android:textSize="24sp" />


    <LinearLayout

        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:id="@+id/llView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <Button

            android:id="@+id/btnsLogin"
            android:layout_width="142dp"
            android:layout_height="64dp"
            android:layout_marginLeft="-30dp"
            android:background="@drawable/circle_dark_blue"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:layout_marginStart="-30dp" />

        <Button

            android:layout_width="142dp"
            android:layout_height="64dp"
            android:layout_marginLeft="-30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/circle_dark_blue"
            android:text="@string/signup"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:layout_marginStart="-30dp" />


    </LinearLayout>




</RelativeLayout>