<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk2"
    tools:context=".LoginActivity">


    <LinearLayout
        android:background="@drawable/login_shape"
        android:orientation="vertical"
        android:layout_width="313dp"
        android:layout_height="521dp"
        android:layout_marginLeft="140dp"
        android:layout_marginRight="-40dp"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="90dp"
        >

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="107dp"
            android:layout_height="59dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="60dp"
            android:text="@string/username"
            android:textColor="#ffff"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="222dp"
            android:layout_height="56dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/login_shape"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="101dp"
            android:layout_height="34dp"
            android:text="@string/password"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="#ffff"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="222dp"
            android:layout_height="56dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/login_shape"
            android:ems="10"
            android:inputType="textPersonName" />


    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="205dp"
        android:layout_marginTop="610dp"
        android:background="@drawable/circle_dark_blue"
        android:text="@string/login"
        android:textColor="#ffff"
        android:textSize="24dp" />


    <LinearLayout

        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:id="@+id/llView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <Button

            android:id="@+id/btnlLogin"
            android:layout_width="142dp"
            android:layout_height="64dp"
            android:layout_marginLeft="-30dp"
            android:background="@drawable/circle_dark_blue"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <Button

            android:id="@+id/btnlSignup"
            android:layout_width="142dp"
            android:layout_height="64dp"
            android:layout_marginLeft="-30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/circle_dark_blue"
            android:text="@string/signup"
            android:textColor="#ffffff"
            android:textSize="18sp" />


    </LinearLayout>



</RelativeLayout>