<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.metome.ProfileActivity">

    <ImageView
        android:id="@+id/ivProfilePhoto"
        android:layout_width="281dp"
        android:layout_height="275dp"
        android:layout_marginLeft="67dp"
        android:layout_marginTop="50dp"
        android:onClick="ivProfilePhoto"
        android:src="@drawable/ic_action_profile" />





    <LinearLayout
        android:id="@+id/linearlayoutProfile"
        android:layout_width="341dp"
        android:layout_height="189dp"
        android:layout_alignBottom="@+id/btnLogout"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-40dp"
        android:layout_marginLeft="-40dp"
        android:layout_marginBottom="156dp"
        android:background="@drawable/login_shape"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvFullName"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/full_name"
            android:textColor="#A6284854"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/tvprofilefullname"
            android:layout_width="374dp"
            android:layout_height="51dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:textColor="#ffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvProfileEmail"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:text="@string/email"
            android:textColor="#ffff"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/tvprofilemail"
            android:layout_width="374dp"
            android:layout_height="51dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:textColor="#ffff"
            android:textSize="20sp" />


    </LinearLayout>


    <Button
        android:id="@+id/btnLogout"
        android:layout_width="186dp"
        android:layout_height="60dp"
        android:layout_below="@+id/ivProfilePhoto"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="306dp"
        android:background="@drawable/categories_shape"
        android:text="@string/logout"
        android:textColor="#ffff"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/ivArrow"
        android:layout_width="51dp"
        android:layout_height="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/abc_vector_test"
        android:backgroundTint="#A6284854" />



</RelativeLayout>